# robotics_projects

./: main  main.cpp
cpp_practice/data_structure/: main  main.cpp
cpp_practice/data_structure/log/: latest_list
cpp_practice/stair_csase/: Makefile  abc.txt  main  main.cpp
robot_arm_control/: .gitignore  README.md
robot_arm_control/coding_test/: CMakeLists.txt  package.xml
robot_arm_control/coding_test/config/: config.rviz  my_simple_robot.launch.py  simple_robot.launch.py  simple_robot.urdf
robot_arm_control/coding_test/include/coding_test/: DummyJointController.hpp  HighLevelController.hpp  JointObserver.hpp  MyDummyJointController.hpp  PathPlanner copy.hpp  PathPlanner-working.hpp  PathPlanner.hpp  utils.hpp
robot_arm_control/coding_test/src/: DummyJointController.cpp  HighLevelController.cpp  JointObserver.cpp  MyDummyJointController.cpp  PathPlanner copy.cpp  PathPlanner-working.cpp  PathPlanner.cpp  dummy_joint_controller_main.cpp  high_level_controller_main.cpp  joint_observer_main.cpp  my_client.cpp  my_client2.cpp  my_dummy_joint_controller_main.cpp  my_server.cpp  path_planner_main.cpp  utils.cpp
robot_arm_control/coding_test/test/: test_common.hpp  test_dummy_joint_controller.cpp  test_high_level_controller.cpp
robot_arm_control/coding_test_msgs/: CMakeLists.txt  package.xml
robot_arm_control/coding_test_msgs/action/: MoveJoints.action  MoveToPoint.action
robot_arm_control/coding_test_msgs/srv/: JointsToPoint.srv  PointToJoints.srv
script/: kf.py
search_scan_matching/: CMakeLists.txt  README.me
search_scan_matching/app/: CMakeLists.txt  main.cpp
search_scan_matching/include/search_scan_matching/: common.h  estimation.h  grid.h  range_finder.h  utils.h
search_scan_matching/src/: common.cpp  estimation.cpp  grid.cpp  range_finder.cpp  utils.cpp
search_scan_matching/tests/: CMakeLists.txt  comm_utest.cpp  grid_itest.cpp  rf_itest.cpp  utest.cpp  utils_utest.cpp
search_scan_matching/tests/include/search_scan_matching_test/: helper.cpp  helper.h
